# pandoc-wikiwords

./: .ghcid  .gitignore  README.md  package.yaml  pandoc-wikiwords.cabal  test.markdown
app/: Main.hs
