name:                pandoc-wikiwords
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/pandoc-wikiwords#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/pandoc-wikiwords#readme>

executable pandoc-wikiwords-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-types
                     , regex-posix
  default-language:    Haskell2010
